# mvp_product_service

./: .gitignore  README.md  Taskfile.yaml  main.py  pyproject.toml
app/: main.py
config/: config.py
models/: crud.py  product.py
routes/: product.py
shemas/: product.py
tests/: conftest.py  test_product_hendler.py
